# shmux

./: .gitignore  .travis.yml  CHANGES  INSTALL  LICENSE  Makefile.in  README.md  configure  configure.ac  mcmd.sh  pkginfo  shmux.1
src/: Makefile.deps  Makefile.in  analyzer.c  analyzer.h  byteset.c  byteset.h  config.h.in  exec.c  exec.h  loop.c  loop.h  os.h  shmux.c  siglist.c  siglist.h  signals.awk  status.c  status.h  target.c  target.h  term.c  term.h  units.c  units.h  version.h
tests/: exitcode.sh  gccbug.sh  lnregex.err  lnregex.out  lnregex.sh  mixed.sh  regex.err  regex.out  regex.sh  run  run.sh  runall  timers.sh
